--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@ layout: default
         <script src="customTool.js"></script>
     </head>
     <body>
-        <p>Damage Value Model Generator</p>
+        <p>耐久度模型檔產生器</p>
         <p>Originally made by Sparks - <a href="http://accidentalgames.com/media/durabilityModels.php">original</a>.</p>
         <p><a href="https://github.com/geenium/damage-value-generator/blob/master/changes_list.txt" target="_blank">List of changes made</a></p>
         <p>Tool: <select id="tool" onchange="toolInfo()">
-            <option value="bow">Bow</option>
+            <option value="bow">弓</option>
             <option value="carrot_on_a_stick">Carrot on a Stick</option>
-            <option value="diamond_hoe">Diamond Tool</option>
-            <option value="elytra">Elytra</option>
+            <option value="diamond_hoe">鑽石工具</option>
+            <option value="elytra">鞘翅</option>
             <option value="fishing_rod">Fishing Rod</option>
             <option value="flint_and_steel">Flint &amp; Steel</option>
             <option value="golden_hoe">Golden Tool</option>
