--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ layout: default
         <p>耐久度模型檔產生器</p>
         <p>Originally made by Sparks - <a href="http://accidentalgames.com/media/durabilityModels.php">original</a>.</p>
         <p><a href="https://github.com/geenium/damage-value-generator/blob/master/changes_list.txt" target="_blank">List of changes made</a></p>
-        <p>Tool: <select id="tool" onchange="toolInfo()">
+        <p>工具: <select id="tool" onchange="toolInfo()">
             <option value="bow">弓</option>
             <option value="carrot_on_a_stick">胡蘿蔔釣竿</option>
             <option value="diamond_hoe">鑽石工具</option>
             <option value="elytra">鞘翅</option>
             <option value="fishing_rod">釣竿</option>
-            <option value="flint_and_steel">打火石; Steel</option>
+            <option value="flint_and_steel">打火石</option>
             <option value="golden_hoe">黃金工具</option>
             <option value="iron_hoe">鐵製工具</option>
             <option value="trident_in_hand">三叉戟</option>
@@ -29,9 +29,9 @@ layout: default
             <option value="compass">羅盤</option>
             <option value="other">其他</option>
         </select>
-        <span class ="info">Choose "other" for custom durability</span></p>
-        <div id="durabilityInfo">Your selected tool has a durability of 385.</div>
-        <p id="unbreakableHide"><input type ="checkbox" id="unbreakable" checked="checked"/> Generate for "unbreakable" tools.</p>
+        <span class ="info">選擇 "其他" 來自定義耐久度</span></p>
+        <div id="durabilityInfo">您選擇的工具的耐用度為 385</div>
+        <p id="unbreakableHide"><input type ="checkbox" id="unbreakable" checked="checked"/> 生成不可破壞標籤的(unbreakable)工具</p>
         <p><input type ="checkbox" id="model" checked="checked"/> Generate model file around result.</p>
         <p><input type ="checkbox" id="inc" checked="checked"/> Add rising number after model placeholder.<span class="info">(e.g. diamond_hoe1, diamond_hoe2, diamond_hoe3...)</span></p>
         <p id="elytraBroken" hidden="true"><input type ="checkbox" id="elytraBrokenCheck"/> Create a predicate for when the elytra is broken.</p>
