--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ layout: default
         <p>Default/placeholder model address:<br>
         <input type="text" id="address" value="item/bow"/></p>
         <p id="ver13"><input type ="checkbox" id="ver13Check" checked="checked" onchange="durabilityInfo()"/> Use 1.13 values, ie durability, texture/folder names by default.</p>
-        <p>Max no. of models to produce (excludes 0 damage):<br>
+        <p>最大耐久度(幾個模組)<br>
         <input type="text" id="modelLimit" value="384"/></p>
         <p><input type="button" value="生成代碼" id="generate" onclick="generate()"/> <input type="button" value="下載 JSON" id="download" disabled onclick="downloadJson()"/></p>
         <textarea readonly id="result" class="hidden"></textarea>
